# ScribbleTrace

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MODERN_README.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  scribbleCurves.py  scribbleLines.py  scribbleSquare.py  scribbletrace.py  scribbletrace_preset.json
examples/: README.md
legacy/src/: ArchimedeanSpiral.py  scribbleCircle.py  scribbleLines.py  scribbleSquare.py  scribbleWorm.y.py
scribbletrace/: __init__.py  cli.py  gui.py  gui_dpg.py  gui_nicegui.py  image_processing.py  svg_output.py
scribbletrace/algorithms/: __init__.py  base.py  circles.py  curves.py  hatching.py  lines.py  spirals.py  squares.py
src/: ArchimedeanSpiral.py  scribbleCurves.py  scribbleLines.py
src/gui/: GUItest.py  GUItest2.py  gui.py  guiTEST3.PY  mainwindow.py  mainwindow.ui
tests/: __init__.py  test_algorithms.py  test_image_processing.py  test_svg_output.py
